Fixed artist modal UI issues - When the name is too long it will not go under the download all button - When there are no albums there will be a nothing found message

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -545,9 +545,7 @@ td.sort-desc:after {content: "\25bc";font-size: 0.7em;padding-left: 3px;line-hei
 	width: 56px;
   height: 56px;
   border-radius: 28px;
-  position: absolute;
-  right: 32px;
-  top: 204px;
+	display: inline-block;
 }
 .fab i{
 	font-size: 24px;
